@@ -3,6 +3,8 @@ v0.7.12
 save combatable with 0.7.9+
     fixes:
         fixed T1 robot factory not showing its growth, and instead showing the T2 factory's growth (so it always said it had zero growth.).
+    new:
+        started work on adding a notification that shows the upgrades that have been done by the automated ship instalation center.
 v0.7.11:
 save combatable with 0.7.9+
     fixes:
